# data-squad-ia

./: .env.example  .gitignore  README.md  apps_script.js  pyproject.toml  test_dicionario.csv
.claude/agents/: README.md
.github/workflows/: data_squad.yml
config/: __init__.py  settings.yaml
data_squad_runs/00012ba4/: data_dict.json  dataset.csv  dq_rules.json  governance_metadata.json  schema.json
data_squad_runs/0f30f128/: dataset.csv  dq_rules.json  governance_metadata.json  schema.json
data_squad_runs/101a8d42/: data_dict.json  dataset.csv  dq_rules.json  governance_metadata.json  schema.json
data_squad_runs/155b0451/: data_dict.json  dataset.csv  dq_rules.json  governance_metadata.json  schema.json
data_squad_runs/1c97c357/: data_dict.json  dataset.csv  dq_rules.json  schema.json
data_squad_runs/2a15c3c1/: dq_rules.json
data_squad_runs/2eb476bf/: data_dict.json  dataset.csv  dq_rules.json  governance_metadata.json  schema.json
data_squad_runs/37674643/: data_dict.json  dataset.csv  dq_rules.json  governance_metadata.json  schema.json
data_squad_runs/5f760416/: data_dict.json  dataset.csv  dq_rules.json  governance_metadata.json  schema.json
data_squad_runs/6ddeab49/: data_dict.json  dataset.csv  dq_rules.json  schema.json
data_squad_runs/8876738a/: dataset.csv  dq_rules.json  governance_metadata.json  schema.json
data_squad_runs/934f74ad/: data_dict.json  dataset.csv  dq_rules.json  governance_metadata.json  schema.json
data_squad_runs/9783f94c/: dataset.csv  dq_rules.json  governance_metadata.json  (+1 more)
src/: models.py  orchestrator.py
(+80 files in other folders)
