[project]
name = "data-squad"
version = "0.1.0"
description = "Multi-agent autonomous data engineer — end-to-end ingestion pipeline"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "playwright>=1.44.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-httplib2>=0.2.0",
    "PyGithub>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
